syntax = "proto3";

package testing;

option java_package = "io.grpc.kotlin.generator.protoc.testproto";

message HasOuterClassNameConflict {}
